Fixed glitches on tablet & mobile

--- a/Webadmin/admin_html/css/sb-admin.css
+++ b/Webadmin/admin_html/css/sb-admin.css
@@ -8,12 +8,17 @@
 
 body {
     margin-top: 100px;
-    background-color: #222;
 }
 
 @media(min-width:768px) {
     body {
         margin-top: 50px;
+    }
+}
+
+@media(max-width: 767px) {
+    .full {
+        display:none;
     }
 }
 
